# agentic-framework

./: .env.example  .gitignore  AGENT_TEMPLATES.md  CONTRIBUTING.md  Dockerfile  FORK_SETUP_GUIDE.md  FRAMEWORK_SUMMARY.md  LICENSE  README.md  api_server.py  docker-compose.production.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-crewai.txt  requirements.txt  setup.sh  test_framework.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: __init__.py  executive_chat.py
agents/examples/: __init__.py  research_agent.py  writer_agent.py
agents/marketing/: __init__.py
agents/sales/: __init__.py
core/: __init__.py  agent.py  agent_communication.py  agent_ollama.py  crew.py  enhanced_prompts.py  enhanced_tools_integration.py  langchain_llm.py  live_tools.py  llm.py  llm_for_crewai.py  llm_for_crewai_ollama.py  llm_ollama.py  llm_singleton.py  llm_singleton_ollama.py  privategpt_client.py  quality_monitoring.py  test_basics.py  test_crewai_with_llm.py  tools.py
core/providers/: llm.py
core/utils/: csv_data_reader.py
demo-ui/: index.html
docs/: getting-started.md  production-deployment.md
knowledge_bases/: __init__.py  kb_interface.py
knowledge_bases/examples/: agent_development_guide.md  framework_overview.md
n8n_workflows/: 00_test_api_connection.json  10_customer_department_workflow.json  11_backoffice_department_workflow.json  12_security_department_workflow.json  13_error_handling_workflow.json  14_monitoring_logging_workflow.json  14_monitoring_logging_workflow_cloud.json  14_monitoring_logging_workflow_fixed.json  14_monitoring_logging_workflow_simple.json  14_monitoring_logging_workflow_simple_updated.json  14_monitoring_logging_workflow_with_trigger.json  15_api_bridge_k8_connection.json  15_api_bridge_k8_connection_fixed.json  1_main_api_workflow.json  1_main_api_workflow_direct.json  1_main_api_workflow_fixed.json  2_chief_ai_agent_workflow.json  2_chief_ai_agent_workflow_simplified.json  3_sales_department_workflow.json  3_sales_department_workflow_fixed.json  4_outbound_sales_manager_workflow.json  5_knowledge_base_integration_workflow.json  6_mcp_integration_workflow.json  7_inbound_sales_manager_workflow.json  7_inbound_sales_manager_workflow_backup.json  8_marketing_department_workflow.json  9_engineering_department_workflow.json  DEPLOYMENT_INSTRUCTIONS.md  EMAIL_FLOW_DIAGRAM.md  FIXES_COMPLETED_SUMMARY.md  FIX_SUPABASE_ARRAYS.md  INTEGRATION_SETUP_GUIDE.md  KUBERNETES_DEPLOYMENT_GUIDE.md  MAIN_API_GATEWAY_WEBHOOK.json  MIGRATION_GUIDE.md  MVP_QUICK_START.md  N8N_MCP_IMPORT_GUIDE.md  NEW_CLIENT_ASSESSMENT_TEMPLATE.json  NEW_CLIENT_ASSESSMENT_TEMPLATE_WITH_RESEND.json  NEW_CLIENT_ASSESSMENT_TEMPLATE_WITH_RESEND_HARDCODED.json  (+34 more)
n8n_workflows/phase5/: PHASE5_ASSESSMENT_WITH_PDF_CRM.json  PHASE5_ASSESSMENT_WITH_PDF_CRM_FIXED.json  (+11 more)
scripts/: deploy-production.sh  fix_gmail_to_smtp.py  fix_hubspot_credentials.py  security-check.sh  test_n8n_mcp.py
tests/: test_n8n_integration.py
tools/: __init__.py  file_tools.py  web_search.py
(+2 files in other folders)
